date centré puis login a droite

--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
 <body>
 
     <header>
-        <div class="date">
-            Du 4 au 6 Avril 2025
-        </div>
-    
-         <div class="login">
-              <button>Login</button>
-        </div> 
-
+        <div class="date">Du 4 au 6 Avril 2025</div>
+        <div class="login"><button>Login</button></div>
     </header>
 
     <main id="main">
